2012-03-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	 * extensions/agents_modules.php: Changes in this view to do it
	 more 'compact'.

	Merged bugfix from trunk.

2012-03-01  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/reporting/reporting_builder.preview.php: Fixed bug: When
	you delete an agent or module, its reports show errors.

2012-02-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Export server
	select is disabled in module policy editor and in standard module 
	edition can be modified when a policy module is edited.
	
	Merged bugfix from trunk. 

2012-02-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/javascript/pandora_modules.js: "snmpwalk" button is 
	disabled after click on that button to avoid duplicate requests.
	
	Merged bugfix from trunk.

2012-02-28 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_reporting.php: Added set_time_limit to 500 secs
	to avoid php timeouts in projection and prediction reports.
	
	Merged bugfix from trunk.

2012-02-28 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/estado_ultimopaquete.php: Fixed bug in this view
	When a module is in a unknown status shows "NeverUnknown" instead of 
	"Unknow".
	
	Bugfix merged from trunk.

2012-02-27  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_events.php: Merged from trunk. Fixed an include
	  path.

2012-02-27 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php: Added avg_only option to boolean 
	graphs, string graphs have more space between elements in legend,
	added units to all graphs.
	* include/graphs/functions_fsgraph.php: Added unit to flash chart
	of type 2D column.
	* include/graphs/fgraph.php: Added unit to static version.
	* include/functions_forecast.php: Fixed division by zero in 
	projection graphs when all data is zero.
	* operation/agentes/stat_win.php: Added avg_only option for boolean
	graph. 
	