@@ -1,5 +1,11 @@
 2012-03-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
+	* general/logon_ok.php: Fixed users link in welcome page.
+
+	Fixes: #3477646
+
+2012-03-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
 	 * extensions/agents_modules.php: Changes in this view to do it
 	 more 'compact'.
 
